--- a/kubernetes/apps/cert-manager/cert-mngr/ks.yaml
+++ b/kubernetes/apps/cert-manager/cert-mngr/ks.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: apps-cert-manager
@@ -19,7 +19,7 @@ spec:
   timeout: 3m
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: apps-cert-manager-issuers
